# onnx-experiment

./: Cargo.toml  README.md  decode_onnx.sh  eval_model.sh  model.onnx  model.onnx.txt  model_creation.py  model_grad.onnx.txt  my_model.onnx  my_model.onnx.txt  my_model_inputs.json  my_model_output.json  onnx_runner.py
onnx_runner/: eval_model.sh  onnx_eval.py  onnx_train.py  train_model.sh  trained.onnx  trained.onnx.txt
src/: lib.rs  main.rs  onnx_runner.rs  onnx_structs.rs  onnx_to_internal_types_conversions.rs  ops.rs
