[package]
name = "onnx-experiment"
version = "0.1.0"
authors = ["Tiberio Ferreira <tiberiusferreira@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.6"
prost-build = "0.6"
# Only necessary if using Protobuf well-known types:
prost-types = "0.6"
serde = {version = "1.0.117", features = ["derive"]}
serde_json = "1.0.59"